@@ -1,6 +1,6 @@
 {
    "Name" : "QTermWidget",
-   "Version" : "2.2.0",
+   "Version" : "2.3.0",
    "Vendor" : "LXQt",
    "Copyright" : "(C) 2022-2025 LXQt",
    "Url" : "https://github.com/lxqt/qtermwidget",
